# main-service

./: Dockerfile  Taskfile.yaml  pyproject.toml
.github/workflows/: dev.yaml
main_service/cmd/: main.py
main_service/depends/: jwt_token.py
main_service/grpc/: auth_client.py
main_service/protos/proto/: Admin.proto  Auth.proto  ResetAuthData.proto
main_service/routes/: auth.py
main_service/service/jwt_decode/: jwt_decode.py
main_service/shemas/auth/: auth_shemas.py
tests/: test_auth.py
